[gd_scene load_steps=4 format=3 uid="uid://dxwfjbo2la56k"]

[ext_resource type="Script" uid="uid://b8ytmfr32521m" path="res://Scripts/UI/base_item_2d.gd" id="1_g85vk"]
[ext_resource type="Shader" uid="uid://dkg4khfi0vep" path="res://Shaders/outline_shader.gdshader" id="2_o6yws"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q21sl"]
shader = ExtResource("2_o6yws")
shader_parameter/thickness = 0.0
shader_parameter/ring_count = 16
shader_parameter/ring_offset = 0.0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/border_clipping_fix = true
shader_parameter/aspect_ratio = 1.0
shader_parameter/square_border = false
shader_parameter/offset = Vector2(0, 0)
shader_parameter/max_or_add = false

[node name="BaseItem_2D" type="Node2D"]
script = ExtResource("1_g85vk")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_q21sl")
scale = Vector2(0.3, 0.3)

[node name="RigidBody2D" type="Area2D" parent="."]
collision_layer = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2(-87.875, 59.0688)
scale = Vector2(183.75, 2.10823)

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="input_event" from="RigidBody2D" to="." method="_on_rigid_body_2d_input_event"]
[connection signal="mouse_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody2D" to="." method="_on_rigid_body_2d_mouse_exited"]
